--- a/css/team.css
+++ b/css/team.css
@@ -3,7 +3,7 @@ author: Boostraptheme
 author URL: https://boostraptheme.com
 License: Creative Commons Attribution 4.0 Unported
 License URL: https://creativecommons.org/licenses/by/4.0/
-*/ 
+*/
 
 /*====================================================
                   TEAM-P1
@@ -31,7 +31,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
 }
 
 #team-p1 .team-p1-cont h6,
-.team-p2 .team-p2-cont h6{ 
+.team-p2 .team-p2-cont h6{
 	color:#f99e00;
 	padding-left: 10px;
 }
@@ -65,3 +65,9 @@ License URL: https://creativecommons.org/licenses/by/4.0/
 		margin: 0 auto;
 	}
 }
+
+/*fix height for Faculty-advisor-pic*/
+img.Faculty-advisor-pic {
+	height: 351px;
+}
+
